# p2p-chat

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.node.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dumbpipe.rs  iroh.rs  lib.rs  main.rs  messages.rs
src/types/: msg.ts
