[package]
name = "p2p-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "p2p_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quic-rpc = "0.18.1"
futures-lite = "2.6.0"
anyhow = "1.0.96"
iroh-docs = { version = "0.32.0", features = ["rpc"] }
bytes = "1.10.0"
iroh = "0.32.1"
tokio = "1.43.0"
iroh-blobs = "0.32.0"
iroh-gossip = "0.32.0"
iroh-base = "0.32.0"
quinn = "0.11.6"
rand = "0.8.5"
rand_core = "0.6.4"
base64 = "0.21.0"

